# yaddns

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.in
doc/: yaddns.1  yaddns.conf.5
etc/: yaddns.conf
include/: config.h  controler.h  ctl.h  defs.h  event.h  log.h  service.h  util.h
src/: Makefile.am  Makefile.in  account.c  account.h  cfgstr.h  config.c  config.h  controler.c  ctl.c  ctl.h  event.c  list.h  log.c  log.h  main.c  myip.c  myip.h  request.c  request.h  service.h  services.c  services.h  util.c  util.h  yaddns.c  yaddns.h
src/layers/: default.c  unix.c
src/services/: Makefile.am  changeip.c  duckdns.c  dyndns.c  dyndnsit.c  no-ip.c  ovh.c  sitelutions.c
tests/: Makefile.am  check_account.c  check_cfgstr.c  check_config.c  check_request.c  check_util.c  yaddns.good.2.conf  yaddns.good.conf  yaddns.invalid.account2_has_invalid_service.conf  yaddns.invalid.conf  yaddns.invalid.unknown_service.conf  yatest.h
